# empathic-credit-system

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start-from-scratch.sh  start.sh  streamlit_app.py
.cursor/rules/: behavior.mdc  project.mdc
docs/: CHALLENGE.md  demo_guide.md  model_card.md  presentation_index.md  presentation_script.md  study_guide.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/evaluate/: page.tsx
frontend/src/app/fairness/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/components/: metric-card.tsx  shap-chart.tsx  sidebar.tsx  webgl-rings.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
notebooks/: 01_eda.ipynb  02_baseline_logreg.ipynb  03_xgboost.ipynb  04_emotional_features.ipynb  05_shap_analysis.ipynb  06_fairness_analysis.ipynb
scripts/: normalize_env.py  seed_frontend_demo.py
src/api/: auth.py  db.py  emotion_consumer.py  main.py  model_store.py  notifications.py  schemas.py  settings.py  worker.py
src/data/: emotional.py  load.py  split.py
src/evaluation/: metrics.py
src/explainability/: shap_explainer.py
tests/: conftest.py  test_api.py  test_db.py  test_emotion_consumer.py  test_emotional.py  test_load.py  test_metrics.py  test_model_store.py  test_normalize_env.py  test_settings.py  test_shap_explainer.py  test_split.py  test_worker.py
(+1 files in other folders)
